--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Latihan Devops</h1>
     <p>Berikut adalah kalimat pertama dari halaman web</p>
-    <audio control>
+    <audio controls autoplay>
       <source src="eric chou.mp3" type="audio/mpeg">
     </audio>
   </body>
